# pymusic

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
src/: main.py
src/pymusic/: player.py  song.py
